--- a/Articles/机器学习032-数据点之间相似度的计算.md
+++ b/Articles/机器学习032-数据点之间相似度的计算.md
@@ -101,7 +101,7 @@ def pearson_score(dataset,user1,user2):
     user2_squared_sum = np.sum([np.square(dataset[user2][item]) for item in both_rated])
 
     # 计算两个用户的相同电影的乘积
-    product_sum=np.sum([dataset[user1][item]*dataset[user1][item] for item in both_rated])
+    product_sum=np.sum([dataset[user1][item]*dataset[user2][item] for item in both_rated])
     
     # 计算Pearson 相关系数
     Sxy = product_sum - (user1_sum * user2_sum / num_ratings)
@@ -114,12 +114,13 @@ def pearson_score(dataset,user1,user2):
     return Sxy / np.sqrt(Sxx * Syy)
 ```
 
-同理计算得到两个用户的皮尔逊相关系数为： -1.386. 貌似这个计算公式有些错误，因为这个数值明显超出了-1到1的范围。所以这个计算函数还需要进一步改进。
+同理计算得到两个用户的皮尔逊相关系数为： Peason score:  0.396. 相似度不能横向比较，即不能将Pearson得分和欧式距离进行比较，这样比较没有意义，只能用于纵向比较。
 
 **\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#小\*\*\*\*\*\*\*\*\*\*结\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#**
 
 **1，用户之间的相似度计算可以采用欧式距离的方式计算，也可以采用皮尔逊相关系数来计算。**
 
+**2，貌似用皮尔逊相关系数来表示相似度更好一些，在很多时候能够克服欧式距离表示法的一些缺点。**
 
 **\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#**
 
