--- a/Articles/机器学习037-NLP文本分块.md
+++ b/Articles/机器学习037-NLP文本分块.md
@@ -37,7 +37,8 @@ def split(dataset,words_num):
 # 数据集暂时用简·奥斯丁的《爱玛》中的文本
 dataset=nltk.corpus.gutenberg.words('austen-emma.txt')
 print(len(dataset)) # 192427 代表读入正常
-result=split(" ".join(dataset)[:1000], 30) # 只取前面的1000个单词，每30个单词分一个块，一共有34个块
+result=split(" ".join(dataset[:1000]), 30) # 只取前面的1000个单词，每30个单词分一个块，一共有34个块
+print(len(result))
 print(result[0])
 print(len(result[0]))
 print(result[-1])
@@ -46,14 +47,15 @@ print(len(result[-1]))
 **-------------------------------------输---------出--------------------------------**
 
 192427
+34
 ['[', 'Emma', 'by', 'Jane', 'Austen', '1816', ']', 'VOLUME', 'I', 'CHAPTER', 'I', 'Emma', 'Woodhouse', ',', 'handsome', ',', 'clever', ',', 'and', 'rich', ',', 'with', 'a', 'comfortable', 'home', 'and', 'happy', 'disposition', ',', 'seemed']
 30
-['more', 'the', 'intimacy', 'of', 'sisters', '.', 'Even', 'before', 'Miss', 'Taylor', 'had', 'ceased', 'to', 'hold', 'the', 'nominal', 'office', 'of', 'gover']
-19
+['its', 'separate', 'lawn', ',', 'and', 'shrubberies', ',', 'and', 'name', ',']
+10
 
 **--------------------------------------------完-------------------------------------**
 
-可以看出split之后的第一个元素长度是30，而最后一个元素的长度是19，并且split函数准确的将文本进行了分块。
+可以看出split之后的分成了34块，第一个块长度是30，而最后一块的长度是10，并且split函数准确的将文本进行了分块。
 
 **\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#小\*\*\*\*\*\*\*\*\*\*结\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#**
 
